# ffanalyze

./: .gitignore  README.md  pyproject.toml
notebooks/: ffstats.ipynb
src/ffanalyze/: col_names.py  colors.py  defense.py  ffanalyze.py  format.py  k_stats.py  math_utils.py  pos_player_stats.py  position.py  qb_stats.py  sit_start.py  stats.py  teams.py
