[project]
name = "ffanalyze"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Matt Aschmann", email = ""},
]
dependencies = [
    "pandas>=2.2.2",
    "tabulate>=0.9.0",
    "jinja2>=3.1.4",
    "notebook>=7.2.2",
    "openpyxl>=3.1.5",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
