[project]
name = "ffanalyze"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Matt Aschmann", email = ""},
]
dependencies = [
    "pandas>=2.2.2",
    "tabulate>=0.9.0",
    "jinja2>=3.1.4",
    "notebook>=7.2.2",
    "openpyxl>=3.1.5",
    "matplotlib>=3.9.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
teams = 'python ./src/ffanalyze/teams.py'
defense = 'python ./src/ffanalyze/defense.py'
qbs = 'python ./src/ffanalyze/qb_stats.py'
pos = 'python ./src/ffanalyze/pos_player_stats.py'
